--- a/abstract/abstract.tex
+++ b/abstract/abstract.tex
@@ -3,33 +3,8 @@
 \prelimheaders
 
 \begin{abstract}
+  The most pressing issues of our time are all characterized by sudden regime shifts: the collapse of marine fisheries or stock-markets, the overthrow of governments, shifts in global climate.  Regime shifts, or sudden transitions in dynamical behavior of a system, underly many important phenomena in ecological and evolutionary problems. How do they arise? How can we identify when a shift has occurred? Can we forecast these shifts? Here I address each of these central questions in the context of a particular system.  First, I show how stochasticity in eco-evolutionary dynamics can give rise two different domains, or regimes, governing the behavior of evolutionary trajectories~\citep{Boettiger2010}. In the next chapter, I turn to the question of identifying evolutionary shifts from data using phylogenetic trees and morphological trait data of extant species~\citep{Boettiger2012}.  In the last chapter, I adapt the approach of the previous section which allowed me to quantify the information available in a given data set that could detect a shift into an approach for detecting regime shifts in ecological time series data before the occur~\citep{Boettiger2012b}.  
 
-Regime shifts are one of the most dramatic signatures of complex systems – the ability to experience sudden transitions in their behavior and patterns is an example of the emergent properties that set such systems apart. These shifts, or tipping points, can be found in many different contexts and can occur for different reasons that may never be encapsulated by a single theory.   Understanding and forecasting these events challenges the capacity of our models, our statistical methods and our available data.  How much can we learn about these systems, what are the best predictions we can make with the knowledge we have, and how do we make sound management decisions in face of such uncertainty?  These questions lie at the crux of regime shift phenomena in ecological systems and at the heart of my research.  
-
-Ecological regime shifts may include the sudden collapse of fisheries or forests, eutrophication of lakes and rivers, or tipping points from carbon cycle feedback loops of global climate change.  Evolutionary regime shifts may include major transitions such as the invasion of new habitat or the development of a novel trait.  A regime of a complex system can be defined as a set of typical patterns or rules describing its behavior.  While we may neither understand nor be able to predict everything about this regime, we can say something about what outcomes we expect and what we do not.   A mathematical model may capture these patterns and behavior within the regime, matching what has already been observed and even predicting future events with reasonable accuracy.  A shift in regime brakes these rules or patterns, driving the system into another patter of behavior, or alternative stable state.  Although our ability to model and predict a complex system is greatest within a regime, many of the most significant dynamics may occur by large and sudden changes that are difficult to anticipate.  
- 
-I am interested in how we (a) understand potential mechanisms that can drive regime shifts, how well we can (b) predict regime shifts. I aim to extend and quantify the limits of understanding of these processes by developing new tools and approaches through uncertainty modeling, high performance computing and large data sets.  While I am interested in the regime shifts in complex systems generally, I often find it best to focus on these shifts in the context of a particular system and set of question, and in close collaboration with specialists in those fields.  
-
-
-\textbf{Understanding mechanisms of regime shifts}
-
-Approaches to understanding mechanisms that may drive regime shifts frequently lie at the limits of existing mathematical models, statistical methods, and available data.  Consequently, advances to our understanding of a particular shift must be accompanied by the development of new models, new statistical approaches, or data synthesis that can overcome these limitations.  I draw on a background in stochastic calculus and dynamical systems to formulate better mathematical models that can capture regime shift dynamics.  Such models rarely correspond to standard statistical tests, so I use likelihood and Bayesian approaches to estimate and compare models.   Estimating complex models with subtle differences requires large data sets -- I am interested in leveraging Internet and computational tools to facilitate access and synthesis of large data sets.  I create and support open source software packages implementing models, statistical tests and remote data manipulation tools I develop.   My recent work on evolutionary transitions illustrates how extending existing modeling, statistical and data synthesis approaches helps me address questions about these shifts.  
-
-Evolutionary transitions that allow biodiversity to expand to a new habitat or new feeding niche punctuate the history of life on this planet.  Can we identify when such shifts occurred, and find hints of what mechanisms, events or functional trait innovations made them possible?  I approach these questions through the framework of comparative phylogenetic methods, bringing together trait data from the field of functional morphology across present-day species with genetic data determining the phylogenetic tree to understand how important traits have evolved across the different species (e.g. Felsenstein 1985).
-
-Most existing models permit only a single evolutionary regime describing evolution across the entire tree.  Identifying key innovations that change the pattern or tempo of evolution in a trait requires the development of more complicated models allowing for such regime shifts, and subsequently solving the likelihood equations that would allow us to estimate these models from data (Boettiger 2011 Evolution Meeting, Beaulieu et al 2012).   These new models allow us to directly compare potential mechanisms for increased diversity in morphology, such as a change of in the position of the evolutionary optima, in the rate variation is introduced, or from a release of selective constraint.  Working with experts in fish functional morphology, we were able to demonstrate that the introduction of a second jaw in the throat of parrotfish released them from the constraints on jaw morphology imposed by suction feeding (Boettiger \& Wainwright in prep).  
-
-Richer models require more data for reliable estimates, which is one reason why models involving regime shifts can be particularly demanding.  It is often impractical to directly gather data across dozens to hundreds of species.  While much of this data has already been collected, existing methods of access are tedious and error-prone.  While facing such challenges working on these evolutionary models I developed the R packages rfishbase and rtreebase, (Chapters 3-4: Boettiger et al., 2012; Boettiger \& Temple Lang, 2012) which provide automated and interactive access, manipulation, and visualization for such large remote repositories.   I am interested in research into ways of rapidly synthesizing large and diverse data sources, which will play an increasingly essential role as ecology \& evolutionary research faces the challenges and opportunities of big data (Reichman et al, 2011).
-
-Only by using these more complex models can we hope to capture the richer behavior such as regime shifts.  Existing models are simpler, focusing on patterns associated with a single regime.  Yet this richness  is a double-edged sword – for richer models need richer data. Current methods are focused on always telling us which model is best, regardless of the data available.  The use of penalties for more complicated models is an important step, but provides no indication of confidence or uncertainty.  I recently introduced a simulation-based  approach to identify when the available data is sufficiently informative to select between potential mechanisms and when it does not contain enough information to make a choice (Chapter 2: Boettiger, Coop \& Ralph 2012).  This investigation into the limits of information balances my development of richer models, ensuring that the complexity of the models not out-pace the complexity of the data available.  This experience in advancing mathematical models of regime shifts balanced by statistical approaches to quantify information helped me address similar challenges in my second interest in regime shifts.  
-
-\textbf{Predicting regime shifts}
-
-Can we predict the approach of a regime shift before it happens?  Without having observed a transition it may be impossible to identify mechanistic models of the responsible processes.  Despite this limitation, we may find certain patterns typical of systems approaching a critical transition that could provide an early warning signal of a shift (Scheffer et al. 2009).  This is both an exciting possibility and an immense challenge – even detailed models frequently fail to provide accurate forecasts when extrapolated beyond the range of the data.  The highly nonlinear nature of regime shifts and the lack of data outside of the current regime makes this forecasting problem even more challenging.  A potential indicator that is too general risks false positives that do not correspond to an approaching transition, while specific indicators may miss more transitions.  Drawing on my previous experience in quantifying information in phylogenetic data, I was able to quantify these probabilities of false alarms and missed detections and investigate the trade-off between these errors for proposed early warning indicators (Chapter 5: Boettiger \& Hastings 2012).  We further introduced a generic model-based indicator that can better minimize both errors at once.  Historical data from systems that have experienced a critical transition plays an important role in testing and calibrating these methods, but relying on historical examples can introduce it's own biases, as I explore in Chapter 6 (Boettiger \& Hastings, in review).  
-
-Forecasting problems must make the best of what data is available, but the calculation of probabilities can quickly become computationally limited.  Drawing on training in high performance computing through my Department of Energy Computational Science Graduate Fellowship I have been able to scale my code to run across 100s of processors at the National Energy Research Scientific Computing (NERSC) center.  I continue to see high performance computing as an important tool in approaching complex systems. Better indicators and approaches that can synthesize large and diverse data streams may improve such forecasts, but predicting regime shifts will always be an uncertain business. We may at best quantify the probability that a regime shift will occur, a percent chance of a transition.  How to we decide what actions to take in face of such valuable but incomplete information?  
-
-
-\end{abstract}
+ \end{abstract}
 
 \input{../settings/boilerplate}
