--- a/bibliography/bibliography.bib
+++ b/bibliography/bibliography.bib
@@ -1,5 +1,179 @@
 
-
+@article{Boettiger2012b,
+archivePrefix = {arXiv},
+arxivId = {arXiv:1204.6231v1},
+author = {Boettiger, Carl and Hastings, Alan},
+doi = {10.1098/rsif.2012.0125},
+eprint = {arXiv:1204.6231v1},
+file = {:home/cboettig/Documents/Mendeley/Boettiger, Hastings - 2012 - Journal of The Royal Society Interface(2).pdf:pdf},
+issn = {1742-5689},
+journal = {Journal of The Royal Society Interface},
+keywords = {alternative stable states,early warning signals,likelihood methods,tipping point},
+month = may,
+number = {75},
+pages = {2527 -- 2539},
+title = {{Quantifying limits to detection of early warning for critical transitions}},
+url = {http://rsif.royalsocietypublishing.org/cgi/doi/10.1098/rsif.2012.0125},
+volume = {9},
+year = {2012}
+}
+@article{Beaulieu2012,
+author = {Beaulieu, Jeremy M. and Jhwueng, Dwueng-Chwuan and Boettiger, Carl and O’Meara, Brian C.},
+doi = {10.1111/j.1558-5646.2012.01619.x},
+file = {:home/cboettig/Documents/Mendeley/Beaulieu et al. - 2012 - Evolution(2).pdf:pdf},
+issn = {00143820},
+journal = {Evolution},
+keywords = {Brownian motion,Hansen model,Ornstein–Uhlenbeck,comparative method,continuous characters},
+month = apr,
+number = {8},
+pages = {2369--2383},
+title = {{Modeling stabilizing selection: expanding the Ornstein-Uhlenbeck model of adaptive evolution}},
+url = {http://doi.wiley.com/10.1111/j.1558-5646.2012.01619.x},
+volume = {66},
+year = {2012}
+}
+@inproceedings{Boettiger2010e,
+author = {Boettiger, Carl},
+booktitle = {Nature Precedings},
+doi = {10.1038/npre.2010.4949.1},
+file = {:home/cboettig/Documents/Mendeley/Boettiger - 2010 - Nature Precedings(4).pdf:pdf},
+issn = {1756-0357},
+month = oct,
+pages = {1--21},
+title = {{Reading the Secrets of Biological Fluctuations}},
+url = {http://precedings.nature.com/doifinder/10.1038/npre.2010.4949.1},
+year = {2010}
+}
+@misc{Boettiger2012a,
+author = {Boettiger, Carl},
+publisher = {CRAN},
+title = {pmc},
+url = {http://cran.r-project.org/web/packages/pmc/},
+year = {2012}
+}
+@misc{Boettiger2011f,
+author = {Boettiger, Carl and Temple-Lang, Duncan},
+publisher = {CRAN},
+title = {treebase},
+url = {http://cran.r-project.org/web/packages/treebase/},
+year = {2011}
+}
+@inproceedings{Boettiger2010d,
+author = {Boettiger, Carl},
+booktitle = {Nature Precedings},
+file = {:home/cboettig/Documents/Mendeley/Boettiger - 2010 - Nature Precedings(3).pdf:pdf},
+title = {{Inferring Adaptive Landscapes from Phylogenetic Trees}},
+year = {2010}
+}
+@inproceedings{Boettiger2010c,
+author = {Boettiger, Carl},
+booktitle = {Nature Precedings},
+doi = {10.1038/npre.2010.4602.1},
+file = {:home/cboettig/Documents/Mendeley/Boettiger - 2010 - Nature Precedings(2).pdf:pdf},
+issn = {1756-0357},
+month = jul,
+title = {{My experiment with open science: Why the benefits of sharing go beyond source code}},
+url = {http://precedings.nature.com/doifinder/10.1038/npre.2010.4602.1},
+year = {2010}
+}
+@inproceedings{Boettiger2010b,
+author = {Boettiger, Carl},
+booktitle = {Nature Precedings},
+doi = {10.1038/npre.2010.4615},
+file = {:home/cboettig/Documents/Mendeley/Boettiger - 2010 - Nature Precedings.pdf:pdf},
+issn = {1756-0357},
+month = jul,
+title = {{A new phylogenetic comparative method: detecting niches and transitions with continuous characters}},
+url = {http://precedings.nature.com/doifinder/10.1038/npre.2010.4615},
+year = {2010}
+}
+@article{Boettiger2012,
+abstract = {Phylogenetic comparative methods may fail to produce meaningful results when either the underlying model is inappropriate or the data contain insufficient information to inform the inference. The ability to measure the statistical power of these methods has become crucial to ensure that data quantity keeps pace with growing model complexity. Through simulations, we show that commonly applied model choice methods based on information criteria can have remarkably high error rates; this can be a problem because methods to estimate the uncertainty or power are not widely known or applied. Furthermore, the power of comparative methods can depend significantly on the structure of the data. We describe a Monte Carlo-based method which addresses both of these challenges, and show how this approach both quantifies and substantially reduces errors relative to information criteria. The method also produces meaningful confidence intervals for model parameters. We illustrate how the power to distinguish different models, such as varying levels of selection, varies both with number of taxa and structure of the phylogeny. We provide an open-source implementation in the pmc ("Phylogenetic Monte Carlo") package for the R programming language. We hope such power analysis becomes a routine part of model comparison in comparative methods.},
+author = {Boettiger, Carl and Coop, Graham and Ralph, Peter},
+doi = {10.1111/j.1558-5646.2011.01574.x},
+file = {:home/cboettig/Documents/Mendeley/Boettiger, Coop, Ralph - 2012 - Evolution(2).pdf:pdf},
+issn = {1558-5646},
+journal = {Evolution},
+keywords = {comparative method,information criteria,model choice,parametric,phylogenetics},
+month = jul,
+number = {7},
+pages = {2240--51},
+pmid = {22759299},
+title = {{Is your phylogeny informative? Measuring the power of comparative methods.}},
+url = {http://doi.wiley.com/10.1111/j.1558-5646.2011.01574.x http://www.ncbi.nlm.nih.gov/pubmed/22759299},
+volume = {66},
+year = {2012}
+}
+@inproceedings{Boettiger2011c,
+author = {Boettiger, Carl},
+booktitle = {Nature Precedings},
+doi = {10.1038/npre.2011.6080.1},
+file = {:home/cboettig/Documents/Mendeley/Boettiger - 2011 - Nature Precedings.pdf:pdf},
+issn = {1756-0357},
+month = jul,
+title = {{A general model of continuous character evolution}},
+url = {http://precedings.nature.com/doifinder/10.1038/npre.2011.6080.1},
+year = {2011}
+}
+@article{Boettiger2010,
+abstract = {We derive an expression for the variation between parallel trajectories in phenotypic evolution, extending the well known result that predicts the mean evolutionary path in adaptive dynamics or quantitative genetics. We show how this expression gives rise to the notion of fluctuation domains-parts of the fitness landscape where the rate of evolution is very predictable (due to fluctuation dissipation) and parts where it is highly variable (due to fluctuation enhancement). These fluctuation domains are determined by the curvature of the fitness landscape. Regions of the fitness landscape with positive curvature, such as adaptive valleys or branching points, experience enhancement. Regions with negative curvature, such as adaptive peaks, experience dissipation. We explore these dynamics in the ecological scenarios of implicit and explicit competition for a limiting resource.},
+author = {Boettiger, Carl and Dushoff, Jonathan and Weitz, Joshua Stephen},
+doi = {10.1016/j.tpb.2009.10.003},
+file = {:home/cboettig/Documents/Mendeley//Boettiger, Dushoff, Weitz - 2010 - Theoretical Population Biology.pdf:pdf},
+issn = {1096-0325},
+journal = {Theoretical Population Biology},
+keywords = {Evolution,canonical equation,fitness landscapes,fluctuation dissipation,fluctuation enhancement},
+number = {1},
+pages = {6--13},
+pmid = {19843477},
+title = {{Fluctuation domains in adaptive evolution.}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/19843477},
+volume = {77},
+year = {2010}
+}
+@phdthesis{Boettiger2007a,
+author = {Boettiger, Carl and Weitz, Joshua Stephen and Levin, Simon A},
+booktitle = {Princeton Physics Dept},
+file = {:home/cboettig/Documents/Mendeley//Boettiger, Weitz, Levin - 2007 - Princeton Physics Dept.pdf:pdf},
+keywords = {Adaptive Dynamics,Evolution},
+mendeley-tags = {Adaptive Dynamics,Evolution},
+school = {Princeton University},
+title = {{Adaptive Dynamics: Branching Phenomena and the Canonical Equation}},
+type = {Spring Junior Paper},
+year = {2007}
+}
+@phdthesis{Boettiger2006,
+author = {Boettiger, Carl and Huse, David},
+booktitle = {Princeton Physics Dept},
+file = {:home/cboettig/Documents/Mendeley/Boettiger, Huse - 2006 - Princeton Physics Dept.pdf:pdf},
+school = {Princeton University},
+title = {{Clonal Interference Models in Population Genetics}},
+type = {Fall Junior Paper},
+year = {2006}
+}
+@phdthesis{Boettiger2007,
+author = {Boettiger, Carl and Pacala, Stephen and Huse, David},
+booktitle = {Princeton Physics Dept},
+file = {:home/cboettig/Documents/Mendeley/Boettiger, Pacala, Huse - 2007 - Princeton Physics Dept.pdf:pdf},
+school = {Princeton University},
+title = {{Ensemble Behavior from Individual Dynamics in Multispecies Forest Populations}},
+type = {Senior Thesis},
+year = {2007}
+}
+@article{Wray2006,
+author = {Wray, James J. and Bahcall, Neta a. and Bode, Paul and Boettiger, Carl and Hopkins, Philip F.},
+doi = {10.1086/508600},
+file = {:home/cboettig/Documents/Mendeley/Wray et al. - 2006 - The Astrophysical Journal.pdf:pdf},
+issn = {0004-637X},
+journal = {The Astrophysical Journal},
+month = dec,
+number = {2},
+pages = {907--916},
+title = {{The Shape, Multiplicity, and Evolution of Superclusters in $\Lambda$CDM Cosmology}},
+url = {http://stacks.iop.org/0004-637X/652/i=2/a=907},
+volume = {652},
+year = {2006}
+}
 @BOOK{feller1968,
   title = {An Introduction to Probability Theory and Its Applications},
   publisher = {Wiley},
