--- a/earlywarning/earlywarning.tex
+++ b/earlywarning/earlywarning.tex
@@ -1,5 +1,5 @@
 \input{../settings/boilerplate}
-\chapter{Quantifying Limits to Detection of Early Warning for Critical Transitions}
+\chapter{Quantifying Limits to Detection of Early Warning for Critical Transitions}\label{warningsignals}
 
 
 
