--- a/fluctuationRegimes/fluctuationRegimes.tex
+++ b/fluctuationRegimes/fluctuationRegimes.tex
@@ -1,6 +1,6 @@
 \input{../settings/boilerplate}
 
-\chapter{Fluctuation Domains in Adaptive Evolution}
+\chapter{Fluctuation Domains in Adaptive Evolution}\label{fluctuationdomains}
 
 \section{Introduction}
 Fitness landscapes have long been an important metaphor in evolution.
