--- a/pmc/pmc.tex
+++ b/pmc/pmc.tex
@@ -1,6 +1,6 @@
 \input{../settings/boilerplate}
 
-\chapter{Is your phylogeny informative? \\Measuring the power of comparative methods}
+\chapter{Is your phylogeny informative? \\Measuring the power of comparative methods}\label{pmc}
 
 \section{Introduction}
 \subsection{Are phylogenies informative?}
