--- a/prelim/dedication.tex
+++ b/prelim/dedication.tex
@@ -6,7 +6,10 @@
 \noindent\begin{minipage}{\textwidth-0.5in}
 \centerline{DEDICATION}
 
-To Grandpa Ed Boettiger
+\begin{center}
+Ed Boettiger 
+\end{center}
+
 \end{minipage}
 \vspace*{\stretch{1}}
 
