--- a/prelim/acknowledgments.tex
+++ b/prelim/acknowledgments.tex
@@ -5,55 +5,41 @@
 \chapter*{Acknowledgments}
 
 \begin{quote}
-ACKNOWLEDGMENTS
-\end{quote}
 
 
-They say UC Davis is a collaborative and interdisciplinary place, and perhaps nowhere is this more evident then in the making of a PhD student.  Seven faculty members across three departments have been close mentors and collaborators 
+They say UC Davis is a collaborative and interdisciplinary place, and perhaps nowhere is this more evident then in the making of a PhD student.  Seven faculty members across three departments have been close mentors and collaborators, the students of many different graduate groups have been a constant support, and I have been particularly fortunate it many collaborators beyond the walls and fields of UC Davis as well.  All this makes for a long acknowledgments section, and I thoroughly apologize to those who deserved more mention than they are given here. 
 
+First I would like to acknowledge my funding source.  The four generous years of support from the Department of Energy Computational Science Graduate Fellowship program were more than financial -- the required program of study and my practicum at Lawrence Berkeley National Lab helped transformed me from a pencil and paper theorist to a more fully fledged computational scientist.  Jeana Gingery and the rest of the Krell Institute handling the fellowship were always a pleasure to work with, and I'm particularly thankful for the connections to computational science across other disciplines that were made possible through the annual conference and interactions with the other CSGF fellows and alumni, and the other members of my CSGF cohort in particular who have been both friends and inspiration to me.  
 
-The four generous years of support from the Department of Energy Computational Science Graduate Fellowship program were more than financial -- the required program of study and my practicum at Lawrence Berkeley National Lab helped transformed me from a pencil and paper theorist to a more fully fledged computational scientist.  Jeana Gingery and the rest of the Krell Institute handling the fellowship were always a pleasure to work with, and I'm particularly thankful for the connections to computational science across other disciplines that were made possible through the annual conference and interactions with the other CSGF fellows and alumni, and the other members of my CSGF cohort in particular who have been both friends and inspiration to me.  
+I am very grateful for the opportunity to spend summers with Ulf Dieckmann at IIASA, Vienna, Austria, and Adam Arkin at Lawrence Berkeley National Lab, which introduced and gave me time to explore new methods and also exposed me to different ways of running research group.  
 
-I would like to acknowledge the Population Biology graduate group, with its excellent faculty, supportive students and notorious Core sequence, and in particular the constant support, motivation, wondering questions and good fun of my cohort Chris Martin, Matt McGee, Michelle Afkahami, Rebbecca Best, and Kirsten Sellheim.  In particular I will never forgive Chris Martin for that day as a second year graduate students when he walked into my office asking questions I couldn't understand about adaptive landscapes and phylogenetic trees, thereby launching my parallel research program in phylogenetic comparative methods.  I'd also like to thank the Theoretical Tea, or Teary group: the members and friends of Schreiber, Hastings, and Baskett labs for so many good conversations between cups of caffeine over the years.  Marissa Baskett has been particularly generous with her time and support, feedback on manuscripts and proposals and welcoming me into her lab group meetings. 
+I would like to thank the Population Biology graduate group, with its excellent faculty, supportive students and notorious Core sequence, and in particular the constant support, motivation, wondering questions and good fun of my cohort Chris Martin, Matt McGee, Michelle Afkahami, Rebbecca Best, and Kirsten Sellheim.  In particular I will never forgive Chris Martin for that day as a second year graduate students when he walked into my office asking questions I couldn't understand about adaptive landscapes and phylogenetic trees, thereby launching my parallel research program in phylogenetic comparative methods.  I'd also like to thank the Theoretical Tea, or Teary group: the members and friends of Schreiber, Hastings, and Baskett labs for so many good conversations between cups of caffeine over the years.  Marissa Baskett has been particularly generous with her time and support, feedback on manuscripts and proposals and welcoming me into her lab group meetings. 
+
+% anything I say about Sebastian would probably sound like idle flattery and insulting to other ecologists.  
+Sebastian Schreiber has been an unofficial adviser, mentor since I arrived at Davis. Sebastian has been a source of inspiration as an excellent teacher, a brilliant mathematician and impeccable ecologist, and I have appreciated his patience and generosity as much as his kind words and support over the past five years.
 
 The Wainwright lab has treated me like one of there own, inviting me along to their lab meetings, conferences, weddings and an even Icthyosaur fossil excavation in Nevada. Peter Wainwright has been a teacher, mentor, collaborator and endless source of clever ideas and fascinating data sets.  Samantha Price has been my kindred computational spirit submersed in a fish lab and a source of insight and inspiration. I would also like to thank Brian Moore, my thesis committee member, teacher, and organizer and co-instructor of the Bodega phylogenetics workshop. Brian's Bayesian world-view and empirical skepticism and fear of bad and miss-applied software have had a profound impact on me.  
 
 Graham Coop and Peter Ralph approached me with some objections to a talk I presented in CPB, sparking a discussion that evolved into a close collaboration that led to the publication in Chapter 2 and laid the groundwork for ideas that would remain central to many other chapters of my thesis.  Graham is a brilliant scientist with a knack for finding nice ways to say ``you're wrong.''   I am ever grateful Peter's patient, clear and reliable insight and explanations to countless thorny questions in statistics and probability.  
 
-Paul Armsworth 
 
-Duncan Temple-Lang has been a teacher, mentor, co-author, co-developer and immensely influential to my thinking and practices in software development, scientific reproducibility, and access, manipulation, visualization and synthesis of large data sources. Duncan has a special talent for communicating more paradigm-shifting ideas in a single meeting than almost anyone I've met,  
+Paul Armsworth from University of Tennessee, who cornered me at a nice dinner at ESA 2011 to bring me into the Pretty Darn Good Control Working Group, has had more influence on my future research at the interface of ecological management and economics than either of us expected or intended at the time. The rest of the working group has also been both an fun to work with and an inspiration towards new approaches.  Likewise Jim Sanchirico has become another mentor to me as I have struggled through stochastic dynamic programming and other optimal control approaches in our recent ecological economics work.  
+% Mike Springborn
 
+Duncan Temple-Lang has been a teacher, mentor, co-author, co-developer and immensely influential to my thinking and practices in software development, scientific reproducibility, and access, manipulation, visualization and synthesis of large data sources. Duncan has a special talent for communicating more paradigm-shifting ideas in a single meeting than almost anyone I've met, and not solely for the speed of talking.  For anyone who has had to endure me discussing one of these topics over a tea or beer, you can blame Duncan for at least part of that.  
 
 I cannot resist an unorthodox acknowledgment to the British Chemist Cameron Neylon, whose own example inspired me to keep an open lab notebook, and whose thinking about the scientific process has had a clear and profound impact on my approach to research and my engagement in the online scientific community. In particular, that engagement led me to Karthik Ram and Scott Chamberlain, ecologists at Berkeley and Rice, who have become both close collaborators and virtual lab mates. 
 
-I am very grateful for the opportunity to spend summers with Ulf Dieckmann at IIASA, Vienna, Austria, and Adam Arkin at Lawrence Berkeley National Lab, which introduced and gave me time to explore new methods and also exposed me to different ways of running research group.  
+My office mate and dear friend Alex Perkins,whose example I attempt to follow in all things within a year lag.  Alex has had to endure just about every step of this PhD alongside me: the banging on the computer, the open science rants, kvetching over the latest papers and celebrating the little victories of some new understanding or the successful execution of some lines of code.  
 
-Sebastian Schreiber 
-
-
+My adviser, Alan Hastings for giving me both the freedom to explore and the advice to succeed.  Alan's perpetual confidence encouragement, and words of wisdom have only allowed me to make enough mistakes to learn from, while his razor-sharp intuition and encyclopedic knowledge of the field have been my continual guide. 
 
 
-Paul Armsworth, Jim Sanchirico, and Mike Springborn.  
+None of this would be possible without those dearest to me.  My twin, Alistair Boettiger, has been my life-long collaborator, sounding board, moral support, and backup memory system.  My parents, for their support and confidence, patience and understanding; for raising me with courage to be different and the will to learn from others, and my fianc\'ee, Louise Berben, for being so supportive and encouraging as I finish this chapter in my education. 
 
+To all the folks at the Sunwise cooperative, and board of Solar Community Housing Association (SCHA): thanks for all the distractions that turned out more valuable than what I was doing anyway.  How often do you get to help lead a volunteer-driven non-profit through a million dollar project to relocate and rebuild two historic homes to provide LEED certified green housing to low income residents, help foster and launch a new non-profit bicycle collective, or organize over 400 volunteers for a community build to rescue another historic local cooperative?  I've learned non-profit law, and patience, managing a \$200,000 annual budget and managing other community volunteers.
 
-
-Sebastian Schreiber 
-
- 
-
-
-% Luke Harmon, Brian O'Meara, Liam Revell.  
-
-
-Alex Perkins
-
-Alan Hastings
-
-
-My twin, Alistair Boettiger, has been my life-long collaborator, sounding board, moral support, and backup memory.  My parents, for their support and confidence, patience and understanding, and my fianc\'ee, Louise Berben. 
-
-Sunwise, SCHA.  How often do you get to help lead a volunteer-driven non-profit through a million dollar project to relocate and rebuild two historic homes to provide LEED certified green housing to low income residents, help foster and launch a new non-profit bicycle collective, or organize over 400 volunteers for a community build to rescue another historic local cooperative?  I've learned non-profit law, and patience, managing a \$200,000 annual budget and managing other community volunteers.
-
+This thesis is dedicated to Ed Boettiger, my paternal grandfather, an insect physiologist by profession whose love of mathematics led him to start testing his new approach to teaching calculus on a ten-year old me.  Grandpa Ed passed away shortly before I finished, but I will always remember his love and inspiration.
+\end{quote}
 
 \input{../settings/boilerplate}
