--- a/earlywarning/earlywarning.tex
+++ b/earlywarning/earlywarning.tex
@@ -4,18 +4,12 @@
 
 
 ection{Introduction}
-There is an increasing recognition of the importance of regime shifts or critical transitions at a variety of scales in ecological systems~\citep{Holling1973, Wissel1984, Scheffer2001, Scheffer2009, Drake2010, Carpenter2011}⁠.
-% broader citations -- see how this is handled by others.  
-Many important ecosystems may currently be threatened with collapse, including corals~\citep{Bellwood2004}, fisheries~\citep{Berkes2006}⁠, lakes~\citep{Carpenter2011}, and semi-arid ecosystems~\citep{Kefi2007}⁠.
-Given the potential impact of  these shifts on the sustainable delivery of ecosystem services~\citep{Folke2004}
-and the need for management to either avoid an undesirable shift or else to adapt to novel conditions,
-it is important to develop the ability to predict impending regime shifts based on early warning signs.
+There is an increasing recognition of the importance of regime shifts or critical transitions at a variety of scales in ecological systems~\citep{Holling1973, Wissel1984, Scheffer2001, Scheffer2009, Drake2010, Carpenter2011}⁠. Many important ecosystems may currently be threatened with collapse, including corals~\citep{Bellwood2004}, fisheries~\citep{Berkes2006}⁠, lakes~\citep{Carpenter2011}, and semi-arid ecosystems~\citep{Kefi2007}⁠. Given the potential impact of  these shifts on the sustainable delivery of ecosystem services~\citep{Folke2004}
+and the need for management to either avoid an undesirable shift or else to adapt to novel conditions, it is important to develop the ability to predict impending regime shifts based on early warning signs.
 
 
 A number of particular systems have demonstrated the kinds of relationships that would produce regime shifts,
-including dynamics of coral reefs~\citep{Mumby2007},
-and simple models of metapopulations with differing local population sizes~\citep{Hastings1991a}.
-In cases like these one sensible approach to understanding 
+including dynamics of coral reefs~\citep{Mumby2007}, and simple models of metapopulations with differing local population sizes~\citep{Hastings1991a}. In cases like these one sensible approach to understanding 
 whether a regime shift would be likely would be 
 to fit the model using either a time series or else independent estimates of parameters. 
 More generally, with a good model of the system, detail-oriented approaches could be useful~\citep{Lade2012}.  
@@ -742,7 +736,7 @@ We would like to thank S. Schreiber, M. Holyoak, M. Baskett, A. Perkins, N.
 Ross, M. Holden, and two anonymous reviewers for comments on the manuscript. 
 This research was supported by funding from NSF Grant EF 0742674 
 and a Computational Sciences Graduate Fellowship from the Department of Energy grant DE-FG02-97ER25308. 
-Data and code are available at \href{https://github.com/cboettig/earlywarning}{ https://github.com/cboettig/earlywarning}.
+Data and code are available at \\ \href{https://github.com/cboettig/earlywarning}{ https://github.com/cboettig/earlywarning}.
 
 
 
